@@ -77,10 +77,12 @@
     functions. (Kalle)
   . y2k_compliance ini option. (Kalle)
 
+- Implemented #51295 (SQLite3::busyTimeout not existing). (Mark)
 - Implemented FR #42060 (Add paged Results support). (ando@OpenLDAP.org,
   iarenuno@eteo.mondragon.edu, jeanseb@au-fil-du.net, remy.saissy@gmail.com)
 
 - Fixed PDO objects binary incompatibility. (Dmitry)
+
 	
 ?? ??? 20??, PHP 5.3.3
 - Upgraded bundled PCRE to version 8.01. (Ilia)
